--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 
 /Programación/012-Inteligencia Artificial/008-entrenamiento/venv
+/Programación/012-Inteligencia Artificial/009-entrenamiento dia 2/lora-cpu-lowram
+/Programación/012-Inteligencia Artificial/009-entrenamiento dia 2/venv
